# flocking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: boid.hh  main.hh
python/: boids.py
src/: boid.cc  main.cc
